// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generators > babel > transforms example test case: browser-current-esm > esm/index-browser-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-current-esm.js.map
"
`;

exports[`Generators > babel > transforms example test case: browser-current-lib > lib/index-browser-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-current-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: browser-current-umd > umd/index-browser-current-umd.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.gen = gen;
  _exports.runGen = runGen;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd

  function* gen() {}
  function runGen() {
    for (const iterator of gen()) {
      console.log(iterator);
    }
  }
});
//# sourceMappingURL=index-browser-current-umd.js.map
"
`;

exports[`Generators > babel > transforms example test case: browser-experimental-esm > esm/index-browser-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-experimental-esm.js.map
"
`;

exports[`Generators > babel > transforms example test case: browser-experimental-lib > lib/index-browser-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-experimental-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: browser-experimental-umd > umd/index-browser-experimental-umd.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.gen = gen;
  _exports.runGen = runGen;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd

  function* gen() {}
  function runGen() {
    for (const iterator of gen()) {
      console.log(iterator);
    }
  }
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
"
`;

exports[`Generators > babel > transforms example test case: browser-legacy-esm > esm/index-browser-legacy-esm.js 1`] = `
"function _createForOfIteratorHelper(r, e) { var t = "undefined" != typeof Symbol && r[Symbol.iterator] || r["@@iterator"]; if (!t) { if (Array.isArray(r) || (t = _unsupportedIterableToArray(r)) || e && r && "number" == typeof r.length) { t && (r = t); var _n = 0, F = function F() {}; return { s: F, n: function n() { return _n >= r.length ? { done: !0 } : { done: !1, value: r[_n++] }; }, e: function e(r) { throw r; }, f: F }; } throw new TypeError("Invalid attempt to iterate non-iterable instance.\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method."); } var o, a = !0, u = !1; return { s: function s() { t = t.call(r); }, n: function n() { var r = t.next(); return a = r.done, r; }, e: function e(r) { u = !0, o = r; }, f: function f() { try { a || null == t.return || t.return(); } finally { if (u) throw o; } } }; }
function _unsupportedIterableToArray(r, a) { if (r) { if ("string" == typeof r) return _arrayLikeToArray(r, a); var t = {}.toString.call(r).slice(8, -1); return "Object" === t && r.constructor && (t = r.constructor.name), "Map" === t || "Set" === t ? Array.from(r) : "Arguments" === t || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(t) ? _arrayLikeToArray(r, a) : void 0; } }
function _arrayLikeToArray(r, a) { (null == a || a > r.length) && (a = r.length); for (var e = 0, n = Array(a); e < a; e++) n[e] = r[e]; return n; }
// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

function* gen() {}
function runGen() {
  var _iterator = _createForOfIteratorHelper(gen()),
    _step;
  try {
    for (_iterator.s(); !(_step = _iterator.n()).done;) {
      var iterator = _step.value;
      console.log(iterator);
    }
  } catch (err) {
    _iterator.e(err);
  } finally {
    _iterator.f();
  }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-legacy-esm.js.map
"
`;

exports[`Generators > babel > transforms example test case: browser-legacy-lib > lib/index-browser-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

function _createForOfIteratorHelper(r, e) { var t = "undefined" != typeof Symbol && r[Symbol.iterator] || r["@@iterator"]; if (!t) { if (Array.isArray(r) || (t = _unsupportedIterableToArray(r)) || e && r && "number" == typeof r.length) { t && (r = t); var _n = 0, F = function F() {}; return { s: F, n: function n() { return _n >= r.length ? { done: !0 } : { done: !1, value: r[_n++] }; }, e: function e(r) { throw r; }, f: F }; } throw new TypeError("Invalid attempt to iterate non-iterable instance.\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method."); } var o, a = !0, u = !1; return { s: function s() { t = t.call(r); }, n: function n() { var r = t.next(); return a = r.done, r; }, e: function e(r) { u = !0, o = r; }, f: function f() { try { a || null == t.return || t.return(); } finally { if (u) throw o; } } }; }
function _unsupportedIterableToArray(r, a) { if (r) { if ("string" == typeof r) return _arrayLikeToArray(r, a); var t = {}.toString.call(r).slice(8, -1); return "Object" === t && r.constructor && (t = r.constructor.name), "Map" === t || "Set" === t ? Array.from(r) : "Arguments" === t || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(t) ? _arrayLikeToArray(r, a) : void 0; } }
function _arrayLikeToArray(r, a) { (null == a || a > r.length) && (a = r.length); for (var e = 0, n = Array(a); e < a; e++) n[e] = r[e]; return n; }
function* gen() {}
function runGen() {
  var _iterator = _createForOfIteratorHelper(gen()),
    _step;
  try {
    for (_iterator.s(); !(_step = _iterator.n()).done;) {
      var iterator = _step.value;
      console.log(iterator);
    }
  } catch (err) {
    _iterator.e(err);
  } finally {
    _iterator.f();
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-legacy-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: browser-legacy-umd > umd/index-browser-legacy-umd.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.gen = gen;
  _exports.runGen = runGen;
  function _createForOfIteratorHelper(r, e) { var t = "undefined" != typeof Symbol && r[Symbol.iterator] || r["@@iterator"]; if (!t) { if (Array.isArray(r) || (t = _unsupportedIterableToArray(r)) || e && r && "number" == typeof r.length) { t && (r = t); var _n = 0, F = function F() {}; return { s: F, n: function n() { return _n >= r.length ? { done: !0 } : { done: !1, value: r[_n++] }; }, e: function e(r) { throw r; }, f: F }; } throw new TypeError("Invalid attempt to iterate non-iterable instance.\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method."); } var o, a = !0, u = !1; return { s: function s() { t = t.call(r); }, n: function n() { var r = t.next(); return a = r.done, r; }, e: function e(r) { u = !0, o = r; }, f: function f() { try { a || null == t.return || t.return(); } finally { if (u) throw o; } } }; }
  function _unsupportedIterableToArray(r, a) { if (r) { if ("string" == typeof r) return _arrayLikeToArray(r, a); var t = {}.toString.call(r).slice(8, -1); return "Object" === t && r.constructor && (t = r.constructor.name), "Map" === t || "Set" === t ? Array.from(r) : "Arguments" === t || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(t) ? _arrayLikeToArray(r, a) : void 0; } }
  function _arrayLikeToArray(r, a) { (null == a || a > r.length) && (a = r.length); for (var e = 0, n = Array(a); e < a; e++) n[e] = r[e]; return n; }
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd

  function* gen() {}
  function runGen() {
    var _iterator = _createForOfIteratorHelper(gen()),
      _step;
    try {
      for (_iterator.s(); !(_step = _iterator.n()).done;) {
        var iterator = _step.value;
        console.log(iterator);
      }
    } catch (err) {
      _iterator.e(err);
    } finally {
      _iterator.f();
    }
  }
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
"
`;

exports[`Generators > babel > transforms example test case: browser-stable-esm > esm/index-browser-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-stable-esm.js.map
"
`;

exports[`Generators > babel > transforms example test case: browser-stable-lib > lib/index-browser-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-stable-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: browser-stable-umd > umd/index-browser-stable-umd.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.gen = gen;
  _exports.runGen = runGen;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd

  function* gen() {}
  function runGen() {
    for (const iterator of gen()) {
      console.log(iterator);
    }
  }
});
//# sourceMappingURL=index-browser-stable-umd.js.map
"
`;

exports[`Generators > babel > transforms example test case: electron-current-esm > esm/index-electron-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-electron-current-esm.js.map
"
`;

exports[`Generators > babel > transforms example test case: electron-current-lib > lib/index-electron-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-current-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: electron-experimental-esm > esm/index-electron-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-electron-experimental-esm.js.map
"
`;

exports[`Generators > babel > transforms example test case: electron-experimental-lib > lib/index-electron-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-experimental-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: electron-legacy-esm > esm/index-electron-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-electron-legacy-esm.js.map
"
`;

exports[`Generators > babel > transforms example test case: electron-legacy-lib > lib/index-electron-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-legacy-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: electron-stable-esm > esm/index-electron-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-electron-stable-esm.js.map
"
`;

exports[`Generators > babel > transforms example test case: electron-stable-lib > lib/index-electron-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-stable-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: native-current-esm > esm/index-native-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-native-current-esm.js.map
"
`;

exports[`Generators > babel > transforms example test case: native-current-lib > lib/index-native-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-current-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: native-experimental-esm > esm/index-native-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-native-experimental-esm.js.map
"
`;

exports[`Generators > babel > transforms example test case: native-experimental-lib > lib/index-native-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-experimental-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: native-legacy-esm > esm/index-native-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-native-legacy-esm.js.map
"
`;

exports[`Generators > babel > transforms example test case: native-legacy-lib > lib/index-native-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-legacy-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: native-stable-esm > esm/index-native-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: esm

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-native-stable-esm.js.map
"
`;

exports[`Generators > babel > transforms example test case: native-stable-lib > lib/index-native-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-stable-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: node-current-cjs > cjs/index-node-current-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-current-cjs.cjs.map
"
`;

exports[`Generators > babel > transforms example test case: node-current-cjs > cjs/index-node-current-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { gen, runGen } = data;"
`;

exports[`Generators > babel > transforms example test case: node-current-lib > lib/index-node-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-current-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: node-current-mjs > mjs/index-node-current-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-node-current-mjs.mjs.map
"
`;

exports[`Generators > babel > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
"
`;

exports[`Generators > babel > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { gen, runGen } = data;"
`;

exports[`Generators > babel > transforms example test case: node-experimental-lib > lib/index-node-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-experimental-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: node-experimental-mjs > mjs/index-node-experimental-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
"
`;

exports[`Generators > babel > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
"
`;

exports[`Generators > babel > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { gen, runGen } = data;"
`;

exports[`Generators > babel > transforms example test case: node-legacy-lib > lib/index-node-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-legacy-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: node-legacy-mjs > mjs/index-node-legacy-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
"
`;

exports[`Generators > babel > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
"
`;

exports[`Generators > babel > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { gen, runGen } = data;"
`;

exports[`Generators > babel > transforms example test case: node-stable-lib > lib/index-node-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-stable-lib.js.map
"
`;

exports[`Generators > babel > transforms example test case: node-stable-mjs > mjs/index-node-stable-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

function* gen() {}
function runGen() {
  for (const iterator of gen()) {
    console.log(iterator);
  }
}
export { gen, runGen };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
"
`;

exports[`Generators > swc > transforms example test case: browser-current-esm > esm/index-browser-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-current-esm.js.map
"
`;

exports[`Generators > swc > transforms example test case: browser-current-lib > lib/index-browser-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-current-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: browser-current-umd > umd/index-browser-current-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        gen: function() {
            return gen;
        },
        runGen: function() {
            return runGen;
        }
    });
    function* gen() {}
    function runGen() {
        for (const iterator of gen()){
            console.log(iterator);
        }
    }
});
//# sourceMappingURL=index-browser-current-umd.js.map
"
`;

exports[`Generators > swc > transforms example test case: browser-experimental-esm > esm/index-browser-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-experimental-esm.js.map
"
`;

exports[`Generators > swc > transforms example test case: browser-experimental-lib > lib/index-browser-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-experimental-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: browser-experimental-umd > umd/index-browser-experimental-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        gen: function() {
            return gen;
        },
        runGen: function() {
            return runGen;
        }
    });
    function* gen() {}
    function runGen() {
        for (const iterator of gen()){
            console.log(iterator);
        }
    }
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
"
`;

exports[`Generators > swc > transforms example test case: browser-legacy-esm > esm/index-browser-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
function _ts_generator(thisArg, body) {
    var f, y, t, g, _ = {
        label: 0,
        sent: function() {
            if (t[0] & 1) throw t[1];
            return t[1];
        },
        trys: [],
        ops: []
    };
    return g = {
        next: verb(0),
        "throw": verb(1),
        "return": verb(2)
    }, typeof Symbol === "function" && (g[Symbol.iterator] = function() {
        return this;
    }), g;
    function verb(n) {
        return function(v) {
            return step([
                n,
                v
            ]);
        };
    }
    function step(op) {
        if (f) throw new TypeError("Generator is already executing.");
        while(_)try {
            if (f = 1, y && (t = op[0] & 2 ? y["return"] : op[0] ? y["throw"] || ((t = y["return"]) && t.call(y), 0) : y.next) && !(t = t.call(y, op[1])).done) return t;
            if (y = 0, t) op = [
                op[0] & 2,
                t.value
            ];
            switch(op[0]){
                case 0:
                case 1:
                    t = op;
                    break;
                case 4:
                    _.label++;
                    return {
                        value: op[1],
                        done: false
                    };
                case 5:
                    _.label++;
                    y = op[1];
                    op = [
                        0
                    ];
                    continue;
                case 7:
                    op = _.ops.pop();
                    _.trys.pop();
                    continue;
                default:
                    if (!(t = _.trys, t = t.length > 0 && t[t.length - 1]) && (op[0] === 6 || op[0] === 2)) {
                        _ = 0;
                        continue;
                    }
                    if (op[0] === 3 && (!t || op[1] > t[0] && op[1] < t[3])) {
                        _.label = op[1];
                        break;
                    }
                    if (op[0] === 6 && _.label < t[1]) {
                        _.label = t[1];
                        t = op;
                        break;
                    }
                    if (t && _.label < t[2]) {
                        _.label = t[2];
                        _.ops.push(op);
                        break;
                    }
                    if (t[2]) _.ops.pop();
                    _.trys.pop();
                    continue;
            }
            op = body.call(thisArg, _);
        } catch (e) {
            op = [
                6,
                e
            ];
            y = 0;
        } finally{
            f = t = 0;
        }
        if (op[0] & 5) throw op[1];
        return {
            value: op[0] ? op[1] : void 0,
            done: true
        };
    }
}
function gen() {
    return _ts_generator(this, function(_state) {
        return [
            2
        ];
    });
}
function runGen() {
    var _iteratorNormalCompletion = true, _didIteratorError = false, _iteratorError = undefined;
    try {
        for(var _iterator = gen()[Symbol.iterator](), _step; !(_iteratorNormalCompletion = (_step = _iterator.next()).done); _iteratorNormalCompletion = true){
            var iterator = _step.value;
            console.log(iterator);
        }
    } catch (err) {
        _didIteratorError = true;
        _iteratorError = err;
    } finally{
        try {
            if (!_iteratorNormalCompletion && _iterator.return != null) {
                _iterator.return();
            }
        } finally{
            if (_didIteratorError) {
                throw _iteratorError;
            }
        }
    }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-legacy-esm.js.map
"
`;

exports[`Generators > swc > transforms example test case: browser-legacy-lib > lib/index-browser-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';
function _ts_generator(thisArg, body) {
    var f, y, t, g, _ = {
        label: 0,
        sent: function() {
            if (t[0] & 1) throw t[1];
            return t[1];
        },
        trys: [],
        ops: []
    };
    return g = {
        next: verb(0),
        "throw": verb(1),
        "return": verb(2)
    }, typeof Symbol === "function" && (g[Symbol.iterator] = function() {
        return this;
    }), g;
    function verb(n) {
        return function(v) {
            return step([
                n,
                v
            ]);
        };
    }
    function step(op) {
        if (f) throw new TypeError("Generator is already executing.");
        while(_)try {
            if (f = 1, y && (t = op[0] & 2 ? y["return"] : op[0] ? y["throw"] || ((t = y["return"]) && t.call(y), 0) : y.next) && !(t = t.call(y, op[1])).done) return t;
            if (y = 0, t) op = [
                op[0] & 2,
                t.value
            ];
            switch(op[0]){
                case 0:
                case 1:
                    t = op;
                    break;
                case 4:
                    _.label++;
                    return {
                        value: op[1],
                        done: false
                    };
                case 5:
                    _.label++;
                    y = op[1];
                    op = [
                        0
                    ];
                    continue;
                case 7:
                    op = _.ops.pop();
                    _.trys.pop();
                    continue;
                default:
                    if (!(t = _.trys, t = t.length > 0 && t[t.length - 1]) && (op[0] === 6 || op[0] === 2)) {
                        _ = 0;
                        continue;
                    }
                    if (op[0] === 3 && (!t || op[1] > t[0] && op[1] < t[3])) {
                        _.label = op[1];
                        break;
                    }
                    if (op[0] === 6 && _.label < t[1]) {
                        _.label = t[1];
                        t = op;
                        break;
                    }
                    if (t && _.label < t[2]) {
                        _.label = t[2];
                        _.ops.push(op);
                        break;
                    }
                    if (t[2]) _.ops.pop();
                    _.trys.pop();
                    continue;
            }
            op = body.call(thisArg, _);
        } catch (e) {
            op = [
                6,
                e
            ];
            y = 0;
        } finally{
            f = t = 0;
        }
        if (op[0] & 5) throw op[1];
        return {
            value: op[0] ? op[1] : void 0,
            done: true
        };
    }
}
function gen() {
    return _ts_generator(this, function(_state) {
        return [
            2
        ];
    });
}
function runGen() {
    var _iteratorNormalCompletion = true, _didIteratorError = false, _iteratorError = undefined;
    try {
        for(var _iterator = gen()[Symbol.iterator](), _step; !(_iteratorNormalCompletion = (_step = _iterator.next()).done); _iteratorNormalCompletion = true){
            var iterator = _step.value;
            console.log(iterator);
        }
    } catch (err) {
        _didIteratorError = true;
        _iteratorError = err;
    } finally{
        try {
            if (!_iteratorNormalCompletion && _iterator.return != null) {
                _iterator.return();
            }
        } finally{
            if (_didIteratorError) {
                throw _iteratorError;
            }
        }
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-legacy-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: browser-legacy-umd > umd/index-browser-legacy-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        gen: function() {
            return gen;
        },
        runGen: function() {
            return runGen;
        }
    });
    function _ts_generator(thisArg, body) {
        var f, y, t, g, _ = {
            label: 0,
            sent: function() {
                if (t[0] & 1) throw t[1];
                return t[1];
            },
            trys: [],
            ops: []
        };
        return g = {
            next: verb(0),
            "throw": verb(1),
            "return": verb(2)
        }, typeof Symbol === "function" && (g[Symbol.iterator] = function() {
            return this;
        }), g;
        function verb(n) {
            return function(v) {
                return step([
                    n,
                    v
                ]);
            };
        }
        function step(op) {
            if (f) throw new TypeError("Generator is already executing.");
            while(_)try {
                if (f = 1, y && (t = op[0] & 2 ? y["return"] : op[0] ? y["throw"] || ((t = y["return"]) && t.call(y), 0) : y.next) && !(t = t.call(y, op[1])).done) return t;
                if (y = 0, t) op = [
                    op[0] & 2,
                    t.value
                ];
                switch(op[0]){
                    case 0:
                    case 1:
                        t = op;
                        break;
                    case 4:
                        _.label++;
                        return {
                            value: op[1],
                            done: false
                        };
                    case 5:
                        _.label++;
                        y = op[1];
                        op = [
                            0
                        ];
                        continue;
                    case 7:
                        op = _.ops.pop();
                        _.trys.pop();
                        continue;
                    default:
                        if (!(t = _.trys, t = t.length > 0 && t[t.length - 1]) && (op[0] === 6 || op[0] === 2)) {
                            _ = 0;
                            continue;
                        }
                        if (op[0] === 3 && (!t || op[1] > t[0] && op[1] < t[3])) {
                            _.label = op[1];
                            break;
                        }
                        if (op[0] === 6 && _.label < t[1]) {
                            _.label = t[1];
                            t = op;
                            break;
                        }
                        if (t && _.label < t[2]) {
                            _.label = t[2];
                            _.ops.push(op);
                            break;
                        }
                        if (t[2]) _.ops.pop();
                        _.trys.pop();
                        continue;
                }
                op = body.call(thisArg, _);
            } catch (e) {
                op = [
                    6,
                    e
                ];
                y = 0;
            } finally{
                f = t = 0;
            }
            if (op[0] & 5) throw op[1];
            return {
                value: op[0] ? op[1] : void 0,
                done: true
            };
        }
    }
    function gen() {
        return _ts_generator(this, function(_state) {
            return [
                2
            ];
        });
    }
    function runGen() {
        var _iteratorNormalCompletion = true, _didIteratorError = false, _iteratorError = undefined;
        try {
            for(var _iterator = gen()[Symbol.iterator](), _step; !(_iteratorNormalCompletion = (_step = _iterator.next()).done); _iteratorNormalCompletion = true){
                var iterator = _step.value;
                console.log(iterator);
            }
        } catch (err) {
            _didIteratorError = true;
            _iteratorError = err;
        } finally{
            try {
                if (!_iteratorNormalCompletion && _iterator.return != null) {
                    _iterator.return();
                }
            } finally{
                if (_didIteratorError) {
                    throw _iteratorError;
                }
            }
        }
    }
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
"
`;

exports[`Generators > swc > transforms example test case: browser-stable-esm > esm/index-browser-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-browser-stable-esm.js.map
"
`;

exports[`Generators > swc > transforms example test case: browser-stable-lib > lib/index-browser-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-browser-stable-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: browser-stable-umd > umd/index-browser-stable-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        gen: function() {
            return gen;
        },
        runGen: function() {
            return runGen;
        }
    });
    function* gen() {}
    function runGen() {
        for (const iterator of gen()){
            console.log(iterator);
        }
    }
});
//# sourceMappingURL=index-browser-stable-umd.js.map
"
`;

exports[`Generators > swc > transforms example test case: electron-current-esm > esm/index-electron-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-electron-current-esm.js.map
"
`;

exports[`Generators > swc > transforms example test case: electron-current-lib > lib/index-electron-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-current-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: electron-experimental-esm > esm/index-electron-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-electron-experimental-esm.js.map
"
`;

exports[`Generators > swc > transforms example test case: electron-experimental-lib > lib/index-electron-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-experimental-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: electron-legacy-esm > esm/index-electron-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-electron-legacy-esm.js.map
"
`;

exports[`Generators > swc > transforms example test case: electron-legacy-lib > lib/index-electron-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-legacy-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: electron-stable-esm > esm/index-electron-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-electron-stable-esm.js.map
"
`;

exports[`Generators > swc > transforms example test case: electron-stable-lib > lib/index-electron-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-electron-stable-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: native-current-esm > esm/index-native-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-native-current-esm.js.map
"
`;

exports[`Generators > swc > transforms example test case: native-current-lib > lib/index-native-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-current-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: native-experimental-esm > esm/index-native-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-native-experimental-esm.js.map
"
`;

exports[`Generators > swc > transforms example test case: native-experimental-lib > lib/index-native-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-experimental-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: native-legacy-esm > esm/index-native-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-native-legacy-esm.js.map
"
`;

exports[`Generators > swc > transforms example test case: native-legacy-lib > lib/index-native-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-legacy-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: native-stable-esm > esm/index-native-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: esm
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-native-stable-esm.js.map
"
`;

exports[`Generators > swc > transforms example test case: native-stable-lib > lib/index-native-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-native-stable-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: node-current-cjs > cjs/index-node-current-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-current-cjs.cjs.map
"
`;

exports[`Generators > swc > transforms example test case: node-current-cjs > cjs/index-node-current-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { gen, runGen } = data;"
`;

exports[`Generators > swc > transforms example test case: node-current-lib > lib/index-node-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-current-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: node-current-mjs > mjs/index-node-current-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-node-current-mjs.mjs.map
"
`;

exports[`Generators > swc > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
"
`;

exports[`Generators > swc > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { gen, runGen } = data;"
`;

exports[`Generators > swc > transforms example test case: node-experimental-lib > lib/index-node-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-experimental-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: node-experimental-mjs > mjs/index-node-experimental-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
"
`;

exports[`Generators > swc > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
"
`;

exports[`Generators > swc > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { gen, runGen } = data;"
`;

exports[`Generators > swc > transforms example test case: node-legacy-lib > lib/index-node-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-legacy-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: node-legacy-mjs > mjs/index-node-legacy-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
"
`;

exports[`Generators > swc > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
"
`;

exports[`Generators > swc > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { gen, runGen } = data;"
`;

exports[`Generators > swc > transforms example test case: node-stable-lib > lib/index-node-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
exports.gen = gen;
exports.runGen = runGen;
//# sourceMappingURL=index-node-stable-lib.js.map
"
`;

exports[`Generators > swc > transforms example test case: node-stable-mjs > mjs/index-node-stable-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
function* gen() {}
function runGen() {
    for (const iterator of gen()){
        console.log(iterator);
    }
}
export { gen, runGen };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
"
`;
